css/about.css
body {
    font-family: "Roboto", sans-serif;
    background-color: #000000;
    margin: 0;
    padding: 0;
    display: block;
    height: 100vh;
    overflow-y: auto;
}

html {
    margin: 0;
    padding: 0;
}

.navbar {
    display: flex;
    justify-content: center;
    gap: 20px;
    padding: 10px 0;
    background-color: black;
    margin-bottom: 10px;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
    overflow-x: auto;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.navbar::-webkit-scrollbar {
    display: none;
}

.navbar a {
    font-size: 20px;
    text-decoration: none;
    color: white;
    padding: 5px 10px;
    transition: color 0.3s ease;
}

.navbar a:hover {
    color: darkcyan;
}

.container {
    text-align: left;
    background-color: black;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    width: 90%;
    max-width: 600px;
    margin: 80px auto 0 auto;
}

.container p {
    line-height: 1.5;
    color: white;
}

.container pre {
    line-height: 1.5;
    color: white;
    text-align: left;
    white-space: pre-wrap;
    word-wrap: break-word;
    width: 100%;
}

h1, h3 {
    color: white;
    margin-bottom: 10px;
}

.about p {
    color: white;
    line-height: 1.5;
    text-align: center;
}

.container a {
    color: white;
    text-decoration: none;
    transition: color 0.3s ease;
}

.container a:hover {
    color: darkcyan;
}

@keyframes spinEffect {
    0% { transform: rotateY(0deg); }
    100% { transform: rotateY(360deg); }
}

@keyframes fadeInDown {
    from {
        opacity: 0;
        transform: translateY(-20px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.animate-fade-in-down {
    animation: fadeInDown 1.25s ease-out forwards;
}

